# software-renderer

./: .gitignore  CMakeLists.txt
src/: Core.hpp  Model.hpp  PixelGrid.cpp  PixelGrid.hpp  RenderSurface.cpp  RenderSurface.hpp  Shader.hpp  Texture.hpp  ZBuffer.cpp  ZBuffer.hpp  main.cpp
src/core/: Cir.hpp  Col.hpp  Colisions.cpp  Mat.hpp  Random.hpp  Rect.hpp  SecClock.hpp  Vec.hpp
